--- a/pfam.ipynb
+++ b/pfam.ipynb
@@ -58,7 +58,9 @@
    "metadata": {},
    "source": [
     "### Load data\n",
-    "We first read in the train, val, test data to `pandas` dataframes"
+    "We first read in the train, val, test data to `pandas` dataframes\n",
+    "\n",
+    "N.B. We could use the stratified sampling to avoid similarities between train and test sets"
    ]
   },
   {
@@ -510,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Large proportion of data is in training set"
+    "$\\implies$ Large proportion of data is in training set"
    ]
   },
   {
@@ -542,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -580,23 +582,23 @@
    "source": [
     "We observe that there is a strong class imbalance. We also lack computational resources to utilise full dataset.\n",
     "\n",
-    "Let's select the top 128 classes."
+    "Let's select the top 64 classes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5341/3781405102.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_5816/1231399794.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  _ = axis.set_xticklabels(family_names, rotation=90)\n",
-      "/tmp/ipykernel_5341/3781405102.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_5816/1231399794.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  _ = axis.set_xticklabels(family_names, rotation=90)\n",
-      "/tmp/ipykernel_5341/3781405102.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_5816/1231399794.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  _ = axis.set_xticklabels(family_names, rotation=90)\n"
      ]
     },
@@ -624,10 +626,56 @@
     "fig, axes = plt.subplots(3,1, figsize=(15,15))\n",
     "for i, (split, df) in enumerate(all_dfs.items()):\n",
     "    top_n_classes(df, N, axes[i])\n",
-    "    axes[i].set_title(f\"Top {N} families in {split} set\")\n",
+    "    _ = axes[i].set_title(f\"Top {N} families in {split} set\")\n",
     "fig.tight_layout()\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((66321, 4), (8256, 4), (8256, 4))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Stack the dataframes\n",
+    "stacked_df = pd.concat(all_dfs.values(), axis=0)\n",
+    "\n",
+    "# Select the top N classes across entire dataset\n",
+    "N = 64\n",
+    "class_freqs = stacked_df[\"family_accession\"].value_counts()\n",
+    "top_N_classes = class_freqs.index[:N]\n",
+    "\n",
+    "top_train_df = train_df[train_df[\"family_accession\"].isin(top_N_classes)]\n",
+    "top_dev_df = dev_df[dev_df[\"family_accession\"].isin(top_N_classes)]\n",
+    "top_test_df = test_df[test_df[\"family_accession\"].isin(top_N_classes)]\n",
+    "\n",
+    "top_train_df.shape, top_dev_df.shape, top_test_df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Input feature (Amino Acids) statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
